--- a/build.gradle
+++ b/build.gradle
@@ -16,12 +16,13 @@ java {
 repositories {
     mavenCentral()
 }
-
 dependencies {
+    implementation 'com.google.code.gson:gson:2.10.1' // Додайте це
     implementation 'org.springframework.boot:spring-boot-starter'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
+
 
 tasks.named('test') {
     useJUnitPlatform()
